argocd/applications/services/dog-page/httproute.yaml
# HTTP route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dog-page-route
  namespace: dog-page
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - dog.horacio.cloud
  rules:
    - backendRefs:
        - name: dog-page-service
          port: 80
